--- a/index.html
+++ b/index.html
@@ -47,21 +47,18 @@
     <div id="topbar">
       <div class="container">
         <div class="social-links">
-          <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-          <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-          <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
+          <a href="https://twitter.com/AimanS_" class="twitter"><i class="fa fa-twitter"></i></a>
+          <a href="https://www.twitch.tv/qidds" class="instagram"><i class="fa fa-twitch"></i></a>
+          <a href="https://www.facebook.com/aimansiddiq/" class="facebook"><i class="fa fa-facebook"></i></a>
+          <a href="https://www.instagram.com/aimansiddiq/" class="instagram"><i class="fa fa-instagram"></i></a>
         </div>
       </div>
     </div>
 
     <div class="container">
-
       <div class="logo float-left">
-        <!-- Uncomment below if you prefer to use an image logo -->
         <h1 class="text-light"><a href="#intro" class="scrollto"><span>QIDDS</span></a></h1>
-        <!-- <a href="#header" class="scrollto"><img src="img/logo.png" alt="" class="img-fluid"></a> -->
       </div>
-
       <nav class="main-nav float-right d-none d-lg-block">
         <ul>
           <li class="active"><a href="#intro">Home</a></li>
@@ -111,7 +108,6 @@
 
     </div>
   </section><!-- #intro -->
-
   <main id="main">
 
     <!--==========================
@@ -120,32 +116,25 @@
     <section id="about">
       <div class="container">
         <div class="row">
-
           <div class="col-lg-5 col-md-6">
             <div class="about-img">
-              <!--<img src="img/about-img.jpg" alt="">-->
+              <img src="img/undraw_education_f8ru.svg" alt="">
             </div>
           </div>
-
           <div class="col-lg-7 col-md-6">
             <div class="about-content">
               <h2>About Me</h2>
-              <h3>The only reason I developed this HTML is to compile my previous works</h3>
-              <p>Hello, my name is Aiman Siddiq, I'm a fan of computer. I studied Computer Science during my diploma and
-                Artificial Intelligence for my degree</p>
+              <h3>The only reason I developed this page is to compile my previous works</h3>
+              <p>Hello, my name is Aiman Siddiq, I'm a fan of computer. <br>I studied Computer Science during my diploma
+                and
+                Artificial Intelligence for my degree.</p>
               <p>I live in Puchong, I play games, and I do not even have any achievements so thank you for visiting and
-                do contact me if some of my works has bugs</p>
-              <a href="#services" class="btn-get-started scrollto">Previous Works</a>
-              <!--<ul>
-                <li><i class="ion-android-checkmark-circle"></i> BPNN Calculator</li>
-                <li><i class="ion-android-checkmark-circle"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-                <li><i class="ion-android-checkmark-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
-              </ul>-->
+                do contact me if some of my works has bugs.</p>
+              <a href="#services" class="btn-wtv">Previous Works</a>
             </div>
           </div>
         </div>
       </div>
-
     </section><!-- #about -->
 
 
@@ -161,196 +150,57 @@
         </header>
 
         <div class="row">
-
           <div class="col-md-6 col-lg-4 wow bounceInUp" data-wow-duration="1.4s">
             <div class="box">
               <div class="icon" style="background: #fceef3;"><i class="ion-ios-analytics-outline"
                   style="color: #ff689b;"></i></div>
               <h4 class="title"><a href="bpnn.html">BPNN Calculator (ISP560)</a></h4>
-              <p class="description">A calculator that automatically solve the BPNN algorithm to help you answer BPNN questions</p>
+              <p class="description">A calculator that automatically solve the BPNN algorithm to help you answer BPNN
+                questions</p>
             </div>
           </div>
-          <!--<div class="col-md-6 col-lg-4 wow bounceInUp" data-wow-duration="1.4s">
-            <div class="box">
-              <div class="icon" style="background: #fff0da;"><i class="ion-ios-bookmarks-outline"
-                  style="color: #e98e06;"></i></div>
-              <h4 class="title"><a href="">Dolor Sitema</a></h4>
-              <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                commodo consequat tarad limino ata</p>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-4 wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
-            <div class="box">
-              <div class="icon" style="background: #e6fdfc;"><i class="ion-ios-paper-outline"
-                  style="color: #3fcdc7;"></i></div>
-              <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
-              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                fugiat nulla pariatur</p>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4 wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
-            <div class="box">
-              <div class="icon" style="background: #eafde7;"><i class="ion-ios-speedometer-outline"
-                  style="color:#41cf2e;"></i></div>
-              <h4 class="title"><a href="">Magni Dolores</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-                mollit anim id est laborum</p>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-4 wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
-            <div class="box">
-              <div class="icon" style="background: #e1eeff;"><i class="ion-ios-world-outline"
-                  style="color: #2282ff;"></i></div>
-              <h4 class="title"><a href="">Nemo Enim</a></h4>
-              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
-                praesentium voluptatum deleniti atque</p>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4 wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
-            <div class="box">
-              <div class="icon" style="background: #ecebff;"><i class="ion-ios-clock-outline"
-                  style="color: #8660fe;"></i></div>
-              <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
-              <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum
-                soluta nobis est eligendi</p>
-            </div>
-          </div>-->
-
         </div>
 
       </div>
     </section><!-- #services -->
 
-    <!--==========================
+  <!--==========================
     Footer
   ============================-->
     <footer id="footer" class="section-bg">
       <div class="footer-top">
         <div class="container">
-
           <div class="row">
-
             <div class="col-lg-6">
-
-              <div class="row">
-
-                <div class="col-sm-6">
-
-                  <div class="footer-info">
-                    <h3>Rapid</h3>
-                    <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita
-                      valies darta donna mare fermentum iaculis eu non diam phasellus. Scelerisque felis imperdiet proin
-                      fermentum leo. Amet volutpat consequat mauris nunc congue.</p>
-                  </div>
-
-                  <div class="footer-newsletter">
-                    <h4>Our Newsletter</h4>
-                    <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna veniam enim veniam illum
-                      dolore legam minim quorum culpa amet magna export quem.</p>
-                    <form action="" method="post">
-                      <input type="email" name="email"><input type="submit" value="Subscribe">
-                    </form>
-                  </div>
-
-                </div>
-
-                <div class="col-sm-6">
-                  <div class="footer-links">
-                    <h4>Useful Links</h4>
-                    <ul>
-                      <li><a href="#">Home</a></li>
-                      <li><a href="#">About us</a></li>
-                      <li><a href="#">Services</a></li>
-                      <li><a href="#">Terms of service</a></li>
-                      <li><a href="#">Privacy policy</a></li>
-                    </ul>
-                  </div>
-
-                  <div class="footer-links">
-                    <h4>Contact Us</h4>
-                    <p>
-                      A108 Adam Street <br>
-                      New York, NY 535022<br>
-                      United States <br>
-                      <strong>Phone:</strong> +1 5589 55488 55<br>
-                      <strong>Email:</strong> info@example.com<br>
-                    </p>
-                  </div>
-
-                  <div class="social-links">
-                    <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-                    <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-                    <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
-                    <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
-                  </div>
-
-                </div>
-
+              <div class="footer-info">
+                <h3>Qidds</h3>
+                <p>Thank you for even reading this.</p>
               </div>
-
             </div>
-
             <div class="col-lg-6">
-
-              <div class="form">
-
-                <h4>Send us a message</h4>
-                <p>Eos ipsa est voluptates. Nostrum nam libero ipsa vero. Debitis quasi sit eaque numquam similique
-                  commodi harum aut temporibus.</p>
-                <form action="" method="post" role="form" class="contactForm">
-                  <div class="form-group">
-                    <input type="text" name="name" class="form-control" id="name" placeholder="Your Name"
-                      data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
-                    <div class="validation"></div>
-                  </div>
-                  <div class="form-group">
-                    <input type="email" class="form-control" name="email" id="email" placeholder="Your Email"
-                      data-rule="email" data-msg="Please enter a valid email" />
-                    <div class="validation"></div>
-                  </div>
-                  <div class="form-group">
-                    <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject"
-                      data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
-                    <div class="validation"></div>
-                  </div>
-                  <div class="form-group">
-                    <textarea class="form-control" name="message" rows="5" data-rule="required"
-                      data-msg="Please write something for us" placeholder="Message"></textarea>
-                    <div class="validation"></div>
-                  </div>
-
-                  <div id="sendmessage">Your message has been sent. Thank you!</div>
-                  <div id="errormessage"></div>
-
-                  <div class="text-center"><button type="submit" title="Send Message">Send Message</button></div>
-                </form>
+              <div class="col-sm-6">
+                <div class="footer-links">
+                  <h4>Contact Me</h4>
+                  <p>
+                    Puchong, Selangor <br>
+                    Malaysia<br>
+                    <strong>Phone:</strong> +60 19-318 3914<br>
+                    <strong>Email:</strong> aimansddiq@gmail.com<br>
+                  </p>
+                </div>
+                <div class="social-links">
+                  <a href="https://twitter.com/AimanS_" class="twitter"><i class="fa fa-twitter"></i></a>
+                  <a href="https://www.twitch.tv/qidds" class="instagram"><i class="fa fa-twitch"></i></a>
+                  <a href="https://www.facebook.com/aimansiddiq/" class="facebook"><i class="fa fa-facebook"></i></a>
+                  <a href="https://www.instagram.com/aimansiddiq/" class="instagram"><i class="fa fa-instagram"></i></a>
+                </div>
               </div>
-
             </div>
-
-
-
           </div>
-
         </div>
       </div>
 
-      <div class="container">
-        <div class="copyright">
-          &copy; Copyright <strong>Rapid</strong>. All Rights Reserved
-        </div>
-        <div class="credits">
-          <!--
-          All the links in the footer should remain intact.
-          You can delete the links only if you purchased the pro version.
-          Licensing information: https://bootstrapmade.com/license/
-          Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Rapid
-        -->
-          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-        </div>
-      </div>
+
     </footer><!-- #footer -->
 
     <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
