--- a/bpnn.html
+++ b/bpnn.html
@@ -36,6 +36,64 @@
     Author: BootstrapMade.com
     License: https://bootstrapmade.com/license/
   ======================================================= -->
+
+  <script>
+    const xnodes = [];
+    const znodes = [];
+    const ynodes = [];
+
+    function addx() {
+      var x = parseFloat(prompt("X value", 0));
+      if (x === "")
+        x = 0;
+      document.getElementById("x-diagram").innerHTML += "<p><svg height='100' width='200'><text x='0' y='50' >" + x + "</text><circle cx='50%' cy='50%' r='40' stroke='black' stroke-width='3' fill='white' /><text x='50%'' y='50%'' text-anchor='middle' stroke-width='2px' dy='.3em'>X</text></svg></p>"
+      var xn = { value: x, vij: [] };
+      xnodes.push(xn);
+      console.log("Added " + xnodes[xnodes.length - 1].toString());
+    }
+    function addz() {
+      //var z = prompt("Z value");
+      document.getElementById("z-diagram").innerHTML += "<p><svg height='100' width='200'><circle cx='50%' cy='50%' r='40' stroke='black' stroke-width='3' fill='white' /><text x='50%'' y='50%'' text-anchor='middle' stroke-width='2px' dy='.3em'>Z</text></svg></p>"
+    }
+    function addy() {
+      var y = parseFloat(prompt("t value"));
+      if (y === "")
+        y = 0;
+      document.getElementById("y-diagram").innerHTML += "<p><svg height='100' width='200'><text x='95%' y='50' >" + y + "</text><circle cx='50%' cy='50%' r='40' stroke='black' stroke-width='3' fill='white' /><text x='50%'' y='50%'' text-anchor='middle' stroke-width='2px' dy='.3em'>Y</text></svg></p>"
+      var yn = {value: y, wjk: []};
+      ynodes.push(yn);
+    }
+    function cleanC() {
+      document.getElementById("x-diagram").innerHTML = " "
+      document.getElementById("z-diagram").innerHTML = " "
+      document.getElementById("y-diagram").innerHTML = " "
+    }
+
+    function debug(){
+      console.log(xnodes);
+      console.log(znodes);
+      console.log(ynodes);
+      console.log(xnodes[0].value + ynodes[0].value);
+    }
+
+    function addbias() {
+
+    }
+  </script>
+  <style>
+    .column {
+      float: left;
+      width: 20%;
+    }
+
+    /* Clear floats after the columns */
+    .row:after {
+      content: "";
+      display: table;
+      clear: both;
+    }
+  </style>
+
 </head>
 
 <body>
@@ -64,7 +122,7 @@
 
       <nav class="main-nav float-right d-none d-lg-block">
         <ul>
-          <li><a href="index.html#intro">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="index.html#about">About Me</a></li>
           <li class="active"><a href="index.html#services">Services</a></li>
           <!--<li class="drop-down"><a href="">Drop Down</a>
@@ -101,45 +159,27 @@
         <h3></h3>
         <p></p>
       </header>
-
       <div class="row">
         <div class="col-lg-12">
           <div class="box">
-            <div class="icon" style="background: #fceef3;"><i class="ion-ios-analytics-outline"
-                style="color: #ff689b;"></i></div>
             <h4 class="title">BPNN Calculator (ISP560)</h4>
-            <p class="description">
-            <div class="form">
-              <p>Input variables</p>
-              <form action="" method="post" role="form" class="contactForm">
-                <div class="form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name"
-                    data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
-                  <div class="validation"></div>
+                <div id="btn">
+                    <a href="#" class="btn-wtv" onclick="addx()">Add X</a>
+                    <a href="#" class="btn-wtv" onclick="addz()">Add Z</a>
+                    <a href="#" class="btn-wtv" onclick="addy()">Add Y</a>
+                    <a href="#" class="btn-wtv" onclick="cleanC()">Clear</a>
+                    <a href="#" class="btn-wtv" onclick="debug()">Debug</a>
+                    <br><br>
                 </div>
-                <div class="form-group">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email"
-                    data-rule="email" data-msg="Please enter a valid email" />
-                  <div class="validation"></div>
+                <div id="nodes">
+                    <div class="row">
+                        <div class="column" id="x-diagram"></div>
+                        <div class="column" id="w"></div>
+                        <div class="column" id="z-diagram"></div>
+                        <div class="column" id="x-diagram"></div>
+                        <div class="column" id="y-diagram"></div>
+                    </div>
                 </div>
-                <div class="form-group">
-                  <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject"
-                    data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
-                  <div class="validation"></div>
-                </div>
-                <div class="form-group">
-                  <textarea class="form-control" name="message" rows="5" data-rule="required"
-                    data-msg="Please write something for us" placeholder="Message"></textarea>
-                  <div class="validation"></div>
-                </div>
-
-                <div id="sendmessage">Your message has been sent. Thank you!</div>
-                <div id="errormessage"></div>
-
-                <div class="text-center"><button type="submit" title="Send Message">Send Message</button></div>
-              </form>
-            </div>
-            </p>
           </div>
 
         </div>
@@ -202,128 +242,37 @@
   <footer id="footer" class="section-bg">
     <div class="footer-top">
       <div class="container">
-
         <div class="row">
-
           <div class="col-lg-6">
-
-            <div class="row">
-
-              <div class="col-sm-6">
-
-                <div class="footer-info">
-                  <h3>Rapid</h3>
-                  <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita
-                    valies darta donna mare fermentum iaculis eu non diam phasellus. Scelerisque felis imperdiet proin
-                    fermentum leo. Amet volutpat consequat mauris nunc congue.</p>
-                </div>
-
-                <div class="footer-newsletter">
-                  <h4>Our Newsletter</h4>
-                  <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna veniam enim veniam illum
-                    dolore legam minim quorum culpa amet magna export quem.</p>
-                  <form action="" method="post">
-                    <input type="email" name="email"><input type="submit" value="Subscribe">
-                  </form>
-                </div>
-
-              </div>
-
-              <div class="col-sm-6">
-                <div class="footer-links">
-                  <h4>Useful Links</h4>
-                  <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About us</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Terms of service</a></li>
-                    <li><a href="#">Privacy policy</a></li>
-                  </ul>
-                </div>
-
-                <div class="footer-links">
-                  <h4>Contact Us</h4>
-                  <p>
-                    A108 Adam Street <br>
-                    New York, NY 535022<br>
-                    United States <br>
-                    <strong>Phone:</strong> +1 5589 55488 55<br>
-                    <strong>Email:</strong> info@example.com<br>
-                  </p>
-                </div>
-
-                <div class="social-links">
-                  <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-                  <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-                  <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
-                  <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
-                </div>
-
-              </div>
-
+            <div class="footer-info">
+              <h3>Qidds</h3>
+              <p>Thank you for even reading this.</p>
             </div>
-
           </div>
-
           <div class="col-lg-6">
-
-            <div class="form">
-
-              <h4>Send us a message</h4>
-              <p>Eos ipsa est voluptates. Nostrum nam libero ipsa vero. Debitis quasi sit eaque numquam similique
-                commodi harum aut temporibus.</p>
-              <form action="" method="post" role="form" class="contactForm">
-                <div class="form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name"
-                    data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
-                  <div class="validation"></div>
-                </div>
-                <div class="form-group">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email"
-                    data-rule="email" data-msg="Please enter a valid email" />
-                  <div class="validation"></div>
-                </div>
-                <div class="form-group">
-                  <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject"
-                    data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
-                  <div class="validation"></div>
-                </div>
-                <div class="form-group">
-                  <textarea class="form-control" name="message" rows="5" data-rule="required"
-                    data-msg="Please write something for us" placeholder="Message"></textarea>
-                  <div class="validation"></div>
-                </div>
-
-                <div id="sendmessage">Your message has been sent. Thank you!</div>
-                <div id="errormessage"></div>
-
-                <div class="text-center"><button type="submit" title="Send Message">Send Message</button></div>
-              </form>
+            <div class="col-sm-6">
+              <div class="footer-links">
+                <h4>Contact Me</h4>
+                <p>
+                  Puchong, Selangor <br>
+                  Malaysia<br>
+                  <strong>Phone:</strong> +60 19-318 3914<br>
+                  <strong>Email:</strong> aimansddiq@gmail.com<br>
+                </p>
+              </div>
+              <div class="social-links">
+                <a href="https://twitter.com/AimanS_" class="twitter"><i class="fa fa-twitter"></i></a>
+                <a href="https://www.twitch.tv/qidds" class="instagram"><i class="fa fa-twitch"></i></a>
+                <a href="https://www.facebook.com/aimansiddiq/" class="facebook"><i class="fa fa-facebook"></i></a>
+                <a href="https://www.instagram.com/aimansiddiq/" class="instagram"><i class="fa fa-instagram"></i></a>
+              </div>
             </div>
-
           </div>
-
-
-
         </div>
-
       </div>
     </div>
 
-    <div class="container">
-      <div class="copyright">
-        &copy; Copyright <strong>Rapid</strong>. All Rights Reserved
-      </div>
-      <div class="credits">
-        <!--
-          All the links in the footer should remain intact.
-          You can delete the links only if you purchased the pro version.
-          Licensing information: https://bootstrapmade.com/license/
-          Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Rapid
-        -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
-    </div>
+
   </footer><!-- #footer -->
 
   <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
