--- a/test.html
+++ b/test.html
@@ -4,34 +4,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Test Module</title>
     <link href="css/style.css" rel="stylesheet">
     <script>
-        class nodes {
-            nodes(value, ij) {
-                this.value = value;
-                this.ij = ij;
-                this.bias = bias;
-            }
-        }
-
-        const xnodes = new array();
-        const znodes = new array();
-        const ynodes = new array();
-
+        const xnodes = [];
+        const znodes = [];
+        const ynodes = [];        
+        
         function addx() {
-            var x = prompt("X value");
+            var x = prompt("X value",0);
             if(x==="")
                 x = 0;
             document.getElementById("x-diagram").innerHTML += "<p><svg height='100' width='200'><text x='0' y='50' >"+x+"</text><circle cx='50%' cy='50%' r='40' stroke='black' stroke-width='3' fill='white' /><text x='50%'' y='50%'' text-anchor='middle' stroke-width='2px' dy='.3em'>X</text></svg></p>"
-            
+            var xn = {value: x, vij: []};
+            xnodes.push(xn);
+            console.log("Added "+ xnodes[xnodes.length-1].toString());
         }
         function addz() {
             //var z = prompt("Z value");
             document.getElementById("z-diagram").innerHTML += "<p><svg height='100' width='200'><circle cx='50%' cy='50%' r='40' stroke='black' stroke-width='3' fill='white' /><text x='50%'' y='50%'' text-anchor='middle' stroke-width='2px' dy='.3em'>Z</text></svg></p>"
         }
         function addy() {
-            var y = prompt("Y value");
+            var y = prompt("t value");
             if(y==="")
                 y = 0;
             document.getElementById("y-diagram").innerHTML += "<p><svg height='100' width='200'><text x='95%' y='50' >"+y+"</text><circle cx='50%' cy='50%' r='40' stroke='black' stroke-width='3' fill='white' /><text x='50%'' y='50%'' text-anchor='middle' stroke-width='2px' dy='.3em'>Y</text></svg></p>"
@@ -40,6 +34,10 @@
             document.getElementById("x-diagram").innerHTML = " "
             document.getElementById("z-diagram").innerHTML = " "
             document.getElementById("y-diagram").innerHTML = " "
+        }
+
+        function addbias(){
+
         }
     </script>
     <style>
@@ -73,7 +71,9 @@
                 <div id="nodes">
                     <div class="row">
                         <div class="column" id="x-diagram"></div>
+                        <div class="column" id="w"></div>
                         <div class="column" id="z-diagram"></div>
+                        <div class="column" id="x-diagram"></div>
                         <div class="column" id="y-diagram"></div>
                     </div>
                 </div>
