--- a/bpnn.html
+++ b/bpnn.html
@@ -180,6 +180,9 @@
                         <div class="column" id="y-diagram"></div>
                     </div>
                 </div>
+                <div id="btn">
+                  <a href="#" class="btn-wtv" onclick="calculateBPN()">Calculate</a>
+                </div>
           </div>
 
         </div>
