--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <div class="container">
       <div class="logo float-left">
-        <h1 class="text-light"><a href="#intro" class="scrollto"><span>QIDDS</span></a></h1>
+        <h1 class="text-light"><a href="https://aimansddiq.github.io/" class="scrollto"><span>QIDDS</span></a></h1>
       </div>
       <nav class="main-nav float-right d-none d-lg-block">
         <ul>
@@ -130,7 +130,7 @@
                 Artificial Intelligence for my degree.</p>
               <p>I live in Puchong, I play games, and I do not even have any achievements so thank you for visiting and
                 do contact me if some of my works has bugs.</p>
-              <a href="#services" class="btn-wtv">Previous Works</a>
+              <a href="#services" class="btn-wtv scrollto">Previous Works</a>
             </div>
           </div>
         </div>
@@ -154,7 +154,7 @@
             <div class="box">
               <div class="icon" style="background: #fceef3;"><i class="ion-ios-analytics-outline"
                   style="color: #ff689b;"></i></div>
-              <h4 class="title"><a href="bpnn.html">BPNN Calculator (ISP560)</a></h4>
+              <h4 class="title"><a href="#" onclick="window.alert('The project is still working in progress')">BPNN Calculator (WIP) </a></h4>
               <p class="description">A calculator that automatically solve the BPNN algorithm to help you answer BPNN
                 questions</p>
             </div>
