--- a/bpnn.html
+++ b/bpnn.html
@@ -105,30 +105,28 @@
     <div id="topbar">
       <div class="container">
         <div class="social-links">
-          <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-          <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-          <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
+          <a href="https://twitter.com/AimanS_" class="twitter"><i class="fa fa-twitter"></i></a>
+          <a href="https://www.twitch.tv/qidds" class="instagram"><i class="fa fa-twitch"></i></a>
+          <a href="https://www.facebook.com/aimansiddiq/" class="facebook"><i class="fa fa-facebook"></i></a>
+          <a href="https://www.instagram.com/aimansiddiq/" class="instagram"><i class="fa fa-instagram"></i></a>
         </div>
       </div>
     </div>
 
     <div class="container">
-
       <div class="logo float-left">
-        <!-- Uncomment below if you prefer to use an image logo -->
-        <h1 class="text-light"><a href="#intro" class="scrollto"><span>QIDDS</span></a></h1>
-        <!-- <a href="#header" class="scrollto"><img src="img/logo.png" alt="" class="img-fluid"></a> -->
+        <h1 class="text-light"><a href="https://aimansddiq.github.io/" class="scrollto"><span>QIDDS</span></a></h1>
       </div>
-
       <nav class="main-nav float-right d-none d-lg-block">
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="index.html#about">About Me</a></li>
-          <li class="active"><a href="index.html#services">Services</a></li>
-          <!--<li class="drop-down"><a href="">Drop Down</a>
+          <!--<li><a href="index.html#services">Projects</a></li>-->          
+          <li><a href="#footer">Contact Me</a></li>
+          <li class="active drop-down"><a href="index.html#services">Projects</a>
             <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="drop-down"><a href="#">Drop Down 2</a>
+              <li><a href="bpnn.html">BPNN Calculator</a></li>
+              <!--<li class="drop-down"><a href="#">Drop Down 2</a>
                 <ul>
                   <li><a href="#">Deep Drop Down 1</a></li>
                   <li><a href="#">Deep Drop Down 2</a></li>
@@ -139,10 +137,9 @@
               </li>
               <li><a href="#">Drop Down 3</a></li>
               <li><a href="#">Drop Down 4</a></li>
-              <li><a href="#">Drop Down 5</a></li>
+              <li><a href="#">Drop Down 5</a></li>-->
             </ul>
-          </li>-->
-          <li><a href="#footer">Contact Me</a></li>
+          </li>
         </ul>
       </nav><!-- .main-nav -->
 
