--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
     <div id="topbar">
       <div class="container">
         <div class="social-links">
-          <a href="https://twitter.com/AimanS_" class="twitter"><i class="fa fa-twitter"></i></a>
-          <a href="https://www.twitch.tv/qidds" class="instagram"><i class="fa fa-twitch"></i></a>
-          <a href="https://www.facebook.com/aimansiddiq/" class="facebook"><i class="fa fa-facebook"></i></a>
-          <a href="https://www.instagram.com/aimansiddiq/" class="instagram"><i class="fa fa-instagram"></i></a>
+          <a href="https://twitter.com/AimanS_" target="_blank" class="twitter"><i class="fa fa-twitter"></i></a>
+          <a href="https://www.twitch.tv/qidds" target="_blank" class="instagram"><i class="fa fa-twitch"></i></a>
+          <a href="https://www.facebook.com/aimansiddiq/" target="_blank" class="facebook"><i class="fa fa-facebook"></i></a>
+          <a href="https://www.instagram.com/aimansiddiq/" target="_blank" class="instagram"><i class="fa fa-instagram"></i></a>
         </div>
       </div>
     </div>
@@ -63,11 +63,12 @@
         <ul>
           <li class="active"><a href="#intro">Home</a></li>
           <li><a href="#about">About Me</a></li>
-          <li><a href="#services">Services</a></li>
-          <!--<li class="drop-down"><a href="">Drop Down</a>
+          <!--<li><a href="#services">Projects</a></li>-->
+          <li><a href="#footer">Contact Me</a></li>
+          <li class="drop-down"><a href="index.html#services">Projects</a>
             <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="drop-down"><a href="#">Drop Down 2</a>
+              <li><a href="bpnn.html" onclick="window.alert('The project is still working in progress'); return false;">BPNN Calculator</a></li>
+              <!--<li class="drop-down"><a href="#">Drop Down 2</a>
                 <ul>
                   <li><a href="#">Deep Drop Down 1</a></li>
                   <li><a href="#">Deep Drop Down 2</a></li>
@@ -78,10 +79,10 @@
               </li>
               <li><a href="#">Drop Down 3</a></li>
               <li><a href="#">Drop Down 4</a></li>
-              <li><a href="#">Drop Down 5</a></li>
+              <li><a href="#">Drop Down 5</a></li>-->
             </ul>
-          </li>-->
-          <li><a href="#footer">Contact Me</a></li>
+          </li>
+          
         </ul>
       </nav><!-- .main-nav -->
 
@@ -145,8 +146,8 @@
       <div class="container">
 
         <header class="section-header">
-          <h3>Previous Works</h3>
-          <p>Here is compilation of my previous works</p>
+          <h3>Projects</h3>
+          <p>Here is compilation of my projects</p>
         </header>
 
         <div class="row">
@@ -154,7 +155,7 @@
             <div class="box">
               <div class="icon" style="background: #fceef3;"><i class="ion-ios-analytics-outline"
                   style="color: #ff689b;"></i></div>
-              <h4 class="title"><a href="#" onclick="window.alert('The project is still working in progress')">BPNN Calculator (WIP) </a></h4>
+              <h4 class="title"><a href="#" onclick="window.alert('The project is still working in progress'); return false;">BPNN Calculator (WIP) </a></h4>
               <p class="description">A calculator that automatically solve the BPNN algorithm to help you answer BPNN
                 questions</p>
             </div>
