--- a/index.html
+++ b/index.html
@@ -125,13 +125,13 @@
           <div class="col-lg-7 col-md-6">
             <div class="about-content">
               <h2>About Me</h2>
-              <h3>The only reason I developed this page is to compile my previous works</h3>
+              <h3>The only reason I developed this page is to compile my projects</h3>
               <p>Hello, my name is Aiman Siddiq, I'm a fan of computer. <br>I studied Computer Science during my diploma
                 and
                 Artificial Intelligence for my degree.</p>
               <p>I live in Puchong, I play games, and I do not even have any achievements so thank you for visiting and
                 do contact me if some of my works has bugs.</p>
-              <a href="#services" class="btn-wtv scrollto">Previous Works</a>
+              <a href="#services" class="btn-wtv scrollto">Projects</a>
             </div>
           </div>
         </div>
