--- a/bpnn.html
+++ b/bpnn.html
@@ -123,7 +123,7 @@
           <li><a href="index.html#about">About Me</a></li>
           <!--<li><a href="index.html#services">Projects</a></li>-->          
           <li><a href="#footer">Contact Me</a></li>
-          <li class="active drop-down"><a href="index.html#services">Projects</a>
+          <li class="active drop-down"><a href="index.html#projects">Projects</a>
             <ul>
               <li><a href="bpnn.html">BPNN Calculator</a></li>
               <!--<li class="drop-down"><a href="#">Drop Down 2</a>
@@ -149,7 +149,7 @@
   <!--==========================
       Services Section
     ============================-->
-  <section id="services" class="section-bg">
+  <section id="projects" class="section-bg">
     <div class="container">
 
       <header class="section-header">
