--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <li><a href="#about">About Me</a></li>
           <!--<li><a href="#services">Projects</a></li>-->
           <li><a href="#footer">Contact Me</a></li>
-          <li class="drop-down"><a href="index.html#services">Projects</a>
+          <li class="drop-down"><a href="index.html#projects">Projects</a>
             <ul>
               <li><a href="bpnn.html" onclick="window.alert('The project is still working in progress'); return false;">BPNN Calculator</a></li>
               <!--<li class="drop-down"><a href="#">Drop Down 2</a>
@@ -81,11 +81,9 @@
               <li><a href="#">Drop Down 4</a></li>
               <li><a href="#">Drop Down 5</a></li>-->
             </ul>
-          </li>
-          
+          </li>          
         </ul>
       </nav><!-- .main-nav -->
-
     </div>
   </header><!-- #header -->
 
@@ -131,18 +129,18 @@
                 Artificial Intelligence for my degree.</p>
               <p>I live in Puchong, I play games, and I do not even have any achievements so thank you for visiting and
                 do contact me if some of my works has bugs.</p>
-              <a href="#services" class="btn-wtv scrollto">Projects</a>
+              <a href="#projects" class="btn-wtv scrollto">Projects</a>
             </div>
           </div>
         </div>
       </div>
     </section><!-- #about -->
-
+<br>
 
     <!--==========================
       Services Section
     ============================-->
-    <section id="services" class="section-bg">
+    <section id="projects" class="section-bg">
       <div class="container">
 
         <header class="section-header">
