--- a/index.html
+++ b/index.html
@@ -188,10 +188,11 @@
                   </p>
                 </div>
                 <div class="social-links">
-                  <a href="https://twitter.com/AimanS_" class="twitter"><i class="fa fa-twitter"></i></a>
-                  <a href="https://www.twitch.tv/qidds" class="instagram"><i class="fa fa-twitch"></i></a>
-                  <a href="https://www.facebook.com/aimansiddiq/" class="facebook"><i class="fa fa-facebook"></i></a>
-                  <a href="https://www.instagram.com/aimansiddiq/" class="instagram"><i class="fa fa-instagram"></i></a>
+                  <a href="https://twitter.com/AimanS_" target="_blank" class="twitter"><i class="fa fa-twitter"></i></a>
+                  <a href="https://www.twitch.tv/qidds" target="_blank" class="instagram"><i class="fa fa-twitch"></i></a>
+                  <a href="https://www.facebook.com/aimansiddiq/" target="_blank" class="facebook"><i class="fa fa-facebook"></i></a>
+                  <a href="https://www.instagram.com/aimansiddiq/" target="_blank" class="instagram"><i class="fa fa-instagram"></i></a>
+                  <a href="https://github.com/aimansddiq" target="_blank" class="instagram"><i class="fa fa-github"></i></a>
                 </div>
               </div>
             </div>
