--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <li><a href="#about">About Me</a></li>
           <!--<li><a href="#services">Projects</a></li>-->
           <li><a href="#footer">Contact Me</a></li>
-          <li class="drop-down"><a href="index.html#projects">Projects</a>
+          <li class="drop-down"><a href="#projects">Projects</a>
             <ul>
               <li><a href="bpnn.html" onclick="window.alert('The project is still working in progress'); return false;">BPNN Calculator</a></li>
               <!--<li class="drop-down"><a href="#">Drop Down 2</a>
