--- a/index.html
+++ b/index.html
@@ -57,15 +57,15 @@
 
     <div class="container">
       <div class="logo float-left">
-        <h1 class="text-light"><a href="https://aimansddiq.github.io/" class="scrollto"><span>QIDDS</span></a></h1>
+        <h1 class="text-light"><a href="https://aimansddiq.github.io/" class="scrollto"><span>AIMANSDDIQ</span></a></h1>
       </div>
       <nav class="main-nav float-right d-none d-lg-block">
         <ul>
           <li class="active"><a href="#intro">Home</a></li>
           <li><a href="#about">About Me</a></li>
-          <!--<li><a href="#services">Projects</a></li>-->
-          <li><a href="#footer">Contact Me</a></li>
+          <!--<li><a href="#services">Projects</a></li>-->          
           <li class="drop-down"><a href="#projects">Projects</a>
+          <li><a href="#footer">Contact Me</a></li>
             <ul>
               <li><a href="bpnn.html" onclick="window.alert('The project is still working in progress'); return false;">BPNN Calculator</a></li>
               <!--<li class="drop-down"><a href="#">Drop Down 2</a>
@@ -94,7 +94,7 @@
     <div class="container d-flex h-100">
       <div class="row justify-content-center align-self-center">
         <div class="col-md-6 intro-info order-md-first order-last">
-          <h2>Welcome to my<br>personal<span> webpage</span></h2>
+          <h2>Welcome to my<br><span> ePortfolio</span></h2>
           <div>
             <a href="#about" class="btn-get-started scrollto">Get To Know Me</a>
           </div>
