--- a/bpnn.html
+++ b/bpnn.html
@@ -115,15 +115,15 @@
 
     <div class="container">
       <div class="logo float-left">
-        <h1 class="text-light"><a href="https://aimansddiq.github.io/" class="scrollto"><span>QIDDS</span></a></h1>
+        <h1 class="text-light"><a href="https://aimansddiq.github.io/" class="scrollto"><span>AIMANSDDIQ</span></a></h1>
       </div>
       <nav class="main-nav float-right d-none d-lg-block">
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="index.html#about">About Me</a></li>
-          <!--<li><a href="index.html#services">Projects</a></li>-->          
+          <!--<li><a href="index.html#services">Projects</a></li>-->       
+          <li class="active drop-down"><a href="index.html#projects">Projects</a>               
           <li><a href="#footer">Contact Me</a></li>
-          <li class="active drop-down"><a href="index.html#projects">Projects</a>
             <ul>
               <li><a href="bpnn.html">BPNN Calculator</a></li>
               <!--<li class="drop-down"><a href="#">Drop Down 2</a>
