--- a/bpnn.html
+++ b/bpnn.html
@@ -105,10 +105,12 @@
     <div id="topbar">
       <div class="container">
         <div class="social-links">
-          <a href="https://twitter.com/AimanS_" class="twitter"><i class="fa fa-twitter"></i></a>
-          <a href="https://www.twitch.tv/qidds" class="instagram"><i class="fa fa-twitch"></i></a>
-          <a href="https://www.facebook.com/aimansiddiq/" class="facebook"><i class="fa fa-facebook"></i></a>
-          <a href="https://www.instagram.com/aimansiddiq/" class="instagram"><i class="fa fa-instagram"></i></a>
+          <a href="https://twitter.com/AimanS_" target="_blank" class="twitter"><i class="fa fa-twitter"></i></a>
+          <a href="https://www.twitch.tv/qidds" target="_blank" class="instagram"><i class="fa fa-twitch"></i></a>
+          <a href="https://www.facebook.com/aimansiddiq/" target="_blank" class="facebook"><i
+              class="fa fa-facebook"></i></a>
+          <a href="https://www.instagram.com/aimansiddiq/" target="_blank" class="instagram"><i
+              class="fa fa-instagram"></i></a>
         </div>
       </div>
     </div>
@@ -119,13 +121,16 @@
       </div>
       <nav class="main-nav float-right d-none d-lg-block">
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="index.html#intro">Home</a></li>
           <li><a href="index.html#about">About Me</a></li>
-          <!--<li><a href="index.html#services">Projects</a></li>-->       
-          <li class="active drop-down"><a href="index.html#projects">Projects</a>               
-          <li><a href="#footer">Contact Me</a></li>
+          <li><a href="index.html#portfolio">Photos</a></li>                    
+          <li><a href="index.html#footer">Contact Me</a></li>
+          <li class="active drop-down"><a href="index.html#projects">Projects</a>
             <ul>
-              <li><a href="bpnn.html">BPNN Calculator</a></li>
+              <li><a href="#projects">BPNN Calculator</a>
+              </li>
+              <li><a href="index.html#projects">NiceHash Mining CSV Analyzer</a>
+            </li>
               <!--<li class="drop-down"><a href="#">Drop Down 2</a>
                 <ul>
                   <li><a href="#">Deep Drop Down 1</a></li>
@@ -141,8 +146,8 @@
             </ul>
           </li>
         </ul>
-      </nav><!-- .main-nav -->
 
+      </nav><!-- .main-nav -->
     </div>
   </header><!-- #header -->
 
