--- a/index.html
+++ b/index.html
@@ -65,12 +65,14 @@
         <ul>
           <li class="active"><a href="#intro">Home</a></li>
           <li><a href="#about">About Me</a></li>
-          <li><a href="#portfolio">Photos</a></li>
+          <li><a href="#portfolio">Photos</a></li>                    
+          <li><a href="#footer">Contact Me</a></li>
           <li class="drop-down"><a href="#projects">Projects</a>
             <ul>
-              <li><a href="bpnn.html"
-                  onclick="window.alert('The project is still working in progress'); return false;">BPNN Calculator</a>
+              <li><a href="#projects">BPNN Calculator</a>
               </li>
+              <li><a href="#projects">NiceHash Mining CSV Analyzer</a>
+            </li>
               <!--<li class="drop-down"><a href="#">Drop Down 2</a>
                 <ul>
                   <li><a href="#">Deep Drop Down 1</a></li>
@@ -84,8 +86,7 @@
               <li><a href="#">Drop Down 4</a></li>
               <li><a href="#">Drop Down 5</a></li>-->
             </ul>
-          </li>          
-          <li><a href="#footer">Contact Me</a></li>
+          </li>
         </ul>
 
       </nav><!-- .main-nav -->
